--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,35 +10,36 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Whatsapp_clone">
         <activity
-            android:name=".SignInActivity"
+            android:name=".Activity.FriendImageActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activity.SignInActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            </activity>
-        <activity
-            android:name=".SignUpActivity"
-            android:exported="true">
-
         </activity>
         <activity
-            android:name=".ChatActivity"
+            android:name=".Activity.SignUpActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".Activity.ChatActivity"
             android:exported="true" />
         <activity
-            android:name=".SetupProfileActivity"
+            android:name=".Activity.SetupProfileActivity"
             android:exported="true" />
         <activity
-            android:name=".OTPActivity"
+            android:name=".Activity.OTPActivity"
             android:exported="true"
             android:windowSoftInputMode="stateVisible" />
         <activity
-            android:name=".PhoneNumberActivity"
+            android:name=".Activity.PhoneNumberActivity"
             android:exported="true"
-            android:windowSoftInputMode="stateVisible"></activity>
+            android:windowSoftInputMode="stateVisible" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:exported="true" />
 
         <meta-data
