--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.whatsapp_clone">
+    package="com.example.whatsapp_clone" >
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Whatsapp_clone">
+        android:theme="@style/Theme.Whatsapp_clone" >
+        <activity
+            android:name=".Activity.HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".Activity.FriendImageActivity"
             android:exported="true" />
         <activity
             android:name=".Activity.SignInActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +26,7 @@
         </activity>
         <activity
             android:name=".Activity.SignUpActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Activity.ChatActivity"
             android:exported="true" />
